--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='40' fill='%234B0082' stroke='%238A2BE2' stroke-width='4'/%3E%3Cellipse cx='50' cy='50' rx='48' ry='15' fill='none' stroke='%23BA55D3' stroke-width='2' transform='rotate(15)'/%3E%3Cellipse cx='50' cy='50' rx='48' ry='15' fill='none' stroke='%239370DB' stroke-width='2' transform='rotate(-15)'/%3E%3C/svg%3E" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Planet Slicer</title>
   </head>
   <body>
     <div id="root"></div>
